--- a/index.scss
+++ b/index.scss
@@ -35,3 +35,57 @@ html {
     }
   }
 }
+
+.container-info-app {
+  padding: 64px 0px;
+  color: #000;
+  background: #fff;
+  &__wrapper-app {
+    padding: 0px 12px;
+    .title-text {
+      width: 67%;
+      display: flex;
+      flex-direction: column;
+      &__title {
+        font-size: 64px;
+        margin: 10px 0px;
+        font-family: 'Poppins', sans-serif;
+        font-weight: 50;
+      }
+      &__text-buy {
+        color: #4caf50;
+        font-size: 48px;
+        font-family: 'Poppins', sans-serif;
+        margin: 10px 0px;
+      }
+      &__text-photo {
+        margin: 6px 0px;
+        font-size: 16px;
+        font-family: 'Poppins', sans-serif;
+      }
+      strong {
+        font-size: 24px;
+      }
+    }
+    .button {
+      width: 20%;
+      color: #000;
+      background: #f1f1f1;
+      padding: 12px 24px;
+      margin: 16px 0px;
+      &:hover {
+        background: #ccc;
+      }
+      span {
+        font-family: 'Poppins', sans-serif;
+      }
+    }
+    .text-available-for {
+      display: flex;
+      span {
+        margin: 16px 0px;
+        font-family: 'Poppins', sans-serif;
+      }
+    }
+  }
+}
