--- a/index.scss
+++ b/index.scss
@@ -1,5 +1,3 @@
-@import './common.scss';
-
 body,
 html {
   height: 100%;
@@ -8,11 +6,52 @@ html {
   background: #000;
 }
 
-.container-header {
+.dialog-container {
+  top: 0;
+  left: 0;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  justify-content: center;
+  .dialog-content {
+    padding: 36px;
+    box-sizing: border-box;
+    width: 900px;
+    height: 150px;
+    top: 10%;
+    position: absolute;
+    background: white;
+    position: relative;
+    color: black;
+    .fa-remove {
+      position: absolute;
+      top: 36px;
+      right: 36px;
+      font-size: 24px;
+      padding: 5px 10px;
+      cursor: pointer;
+      &:hover {
+        background: #ccc;
+      }
+    }
+  }
+}
+
+.main-wrapper {
   max-width: 1500px;
   color: #fff;
   background: #000;
+  margin: auto;
+}
+
+.container-header {
   font-family: 'Poppins', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
   &__header-foto {
     animation: opac 0.8s;
     img {
@@ -20,17 +59,112 @@ html {
       margin-bottom: -8px;
     }
   }
-  .header-button {
+  .header-button-wrapper {
     width: 35%;
+    position: absolute;
+    padding: 12px 24px;
+    box-sizing: border-box;
+  }
+  .button-take-tour {
+    position: absolute;
+    top: 50%;
     padding: 8px 16px;
+    color: white;
+    right: 16px;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    background: black;
+    border-radius: 4px;
+    line-height: 1.5;
+    cursor: pointer;
+    &:hover {
+      background: white;
+      color: black;
+    }
+  }
+  .header-button {
+    background: black;
+    color: white;
+    opacity: 0.6;
+    padding: 12px 24px;
+    border-radius: 8px;
+    text-align: center;
+    &:hover {
+      opacity: 1;
+    }
     &__button-text {
-      opacity: 0.6;
       border-radius: 8px;
       .title {
         font-size: 24px;
         font-family: 'Poppins', sans-serif;
         font-weight: 400;
         margin: 10px 0px;
+      }
+      hr {
+        display: block;
+        border: none;
+        border-bottom: 1px solid white;
+        margin: 20px 0px;
+      }
+      .subtitle {
+        font-size: 16px;
+        text-align: center;
+      }
+    }
+    .button-wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      padding: 15px 0px 10px;
+      .header-card-button {
+        padding: 8px 16px;
+        line-height: 1.5;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        background-color: #4caf50;
+        font-size: 16px;
+        border: none;
+        outline: none;
+        border-radius: 4px;
+        cursor: pointer;
+        i {
+          margin: 0px 3px;
+        }
+      }
+    }
+  }
+  .header-slide {
+    display: none;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    &:first-child {
+      display: flex;
+    }
+    opacity: 0;
+    animation: opacitySlide 0.4s forwards;
+    @keyframes opacitySlide {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
+    &:nth-child(2) {
+      .header-card-button {
+        background: #f44336;
+      }
+      .title {
+        color: #f44336 !important;
+      }
+    }
+    &:nth-child(3) {
+      .header-card-button {
+        background: #3f51b5;
       }
     }
   }
@@ -89,3 +223,5 @@ html {
     }
   }
 }
+
+@import './common.scss';
