--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,3 @@
-.gray-hover {
-  background: #ccc;
-}
-
 body,
 html {
   height: 100%;
@@ -10,11 +6,52 @@ html {
   background: #000;
 }
 
-.container-header {
+.dialog-container {
+  top: 0;
+  left: 0;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  justify-content: center;
+}
+.dialog-container .dialog-content {
+  padding: 36px;
+  box-sizing: border-box;
+  width: 900px;
+  height: 150px;
+  top: 10%;
+  position: absolute;
+  background: white;
+  position: relative;
+  color: black;
+}
+.dialog-container .dialog-content .fa-remove {
+  position: absolute;
+  top: 36px;
+  right: 36px;
+  font-size: 24px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+.dialog-container .dialog-content .fa-remove:hover {
+  background: #ccc;
+}
+
+.main-wrapper {
   max-width: 1500px;
   color: #fff;
   background: #000;
+  margin: auto;
+}
+
+.container-header {
   font-family: "Poppins", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
 }
 .container-header__header-foto {
   animation: opac 0.8s;
@@ -23,12 +60,42 @@ html {
   max-width: 100%;
   margin-bottom: -8px;
 }
-.container-header .header-button {
+.container-header .header-button-wrapper {
   width: 35%;
+  position: absolute;
+  padding: 12px 24px;
+  box-sizing: border-box;
+}
+.container-header .button-take-tour {
+  position: absolute;
+  top: 50%;
   padding: 8px 16px;
+  color: white;
+  right: 16px;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  background: black;
+  border-radius: 4px;
+  line-height: 1.5;
+  cursor: pointer;
+}
+.container-header .button-take-tour:hover {
+  background: white;
+  color: black;
+}
+.container-header .header-button {
+  background: black;
+  color: white;
+  opacity: 0.6;
+  padding: 12px 24px;
+  border-radius: 8px;
+  text-align: center;
+}
+.container-header .header-button:hover {
+  opacity: 1;
 }
 .container-header .header-button__button-text {
-  opacity: 0.6;
   border-radius: 8px;
 }
 .container-header .header-button__button-text .title {
@@ -36,6 +103,67 @@ html {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   margin: 10px 0px;
+}
+.container-header .header-button__button-text hr {
+  display: block;
+  border: none;
+  border-bottom: 1px solid white;
+  margin: 20px 0px;
+}
+.container-header .header-button__button-text .subtitle {
+  font-size: 16px;
+  text-align: center;
+}
+.container-header .header-button .button-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 15px 0px 10px;
+}
+.container-header .header-button .button-wrapper .header-card-button {
+  padding: 8px 16px;
+  line-height: 1.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  background-color: #4caf50;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.container-header .header-button .button-wrapper .header-card-button i {
+  margin: 0px 3px;
+}
+.container-header .header-slide {
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  opacity: 0;
+  animation: opacitySlide 0.4s forwards;
+}
+.container-header .header-slide:first-child {
+  display: flex;
+}
+@keyframes opacitySlide {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.container-header .header-slide:nth-child(2) .header-card-button {
+  background: #f44336;
+}
+.container-header .header-slide:nth-child(2) .title {
+  color: #f44336 !important;
+}
+.container-header .header-slide:nth-child(3) .header-card-button {
+  background: #3f51b5;
 }
 
 .container-info-app {
@@ -90,6 +218,11 @@ html {
 .container-info-app__wrapper-app .text-available-for span {
   margin: 16px 0px;
   font-family: "Poppins", sans-serif;
+}
+
+.gray-hover:hover {
+  color: #000 !important;
+  background-color: #ccc !important;
 }
 
 /*# sourceMappingURL=index.css.map */
