finih criating features

--- a/common.scss
+++ b/common.scss
@@ -2,3 +2,47 @@
   color: #000 !important;
   background-color: #ccc !important;
 }
+
+.orange-color {
+  color: #ff9800;
+}
+
+.red-color {
+  color: #f44336;
+}
+
+.light-green-color {
+  color: #d2be0e;
+}
+
+.green-color {
+  color: #4caf50;
+}
+
+.white-color {
+  color: #fff;
+}
+
+.blue-color {
+  color: #2196f3;
+}
+
+.yellow-color {
+  color: #ffc107;
+}
+
+.light-blue {
+  color: #00bcd4;
+}
+
+.beige-color {
+  color: #fdf5e6;
+}
+
+.gray-color {
+  color: #757575;
+}
+
+.pink-color {
+  color: #e91e63;
+}
