--- a/index.scss
+++ b/index.scss
@@ -337,7 +337,7 @@ html {
   }
 }
 
-.container-icon {
+.app-container-icon {
   color: #fff;
   background: #616161;
   padding-top: 64px;
@@ -391,9 +391,53 @@ html {
     margin: 18px 0px;
     text-align: center;
   }
-  .block-basic {
-    margin-top: 64px;
+  .pricing-crads-container {
+    display: flex;
+    justify-content: center;
     padding: 0px 8px;
+    margin-top: 64px;
+    .pricing-crad {
+      width: 50%;
+      font-family: 'Poppins', sans-serif;
+      margin: 0px 8px;
+      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+        0 2px 10px 0 rgba(0, 0, 0, 0.12);
+      &__title {
+        padding: 32px 16px;
+        text-align: center;
+        color: #fff;
+        background-color: #616161;
+        border-bottom: 1px solid #ddd;
+        font-size: 24px;
+      }
+      &__properties {
+        padding: 16px 16px;
+        border-bottom: 1px solid #ddd;
+        font-size: 16px;
+        line-height: 1.5;
+        text-align: center;
+        &__price {
+          padding: 10px 0px;
+          opacity: 0.6;
+          font-size: 30px;
+        }
+      }
+      &__button-wrapper {
+        padding: 24px 16px;
+        background-color: #f1f1f1;
+        display: flex;
+        justify-content: center;
+      }
+      &__button {
+        padding: 12px 24px;
+        background: black;
+        color: white;
+        border: none;
+        outline: none;
+        font-size: 16px;
+        cursor: pointer;
+      }
+    }
   }
 }
 
