--- a/index.scss
+++ b/index.scss
@@ -409,6 +409,9 @@ html {
         background-color: #616161;
         border-bottom: 1px solid #ddd;
         font-size: 24px;
+        &:nth-child(2) {
+          color: #f44336;
+        }
       }
       &__properties {
         padding: 16px 16px;
@@ -438,6 +441,29 @@ html {
         cursor: pointer;
       }
     }
+  }
+}
+
+.container-footer {
+  font-size: 24px;
+  font-family: 'Poppins', sans-serif;
+  color: #000;
+  background: #f1f1f1;
+  text-align: center;
+  padding: 32px 16px;
+  &__block-icon {
+    font-size: 24px;
+    font-family: 'Poppins', sans-serif;
+    margin: 16px 0px;
+  }
+  &__tetx {
+    color: #000;
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    margin: 15px 0px;
+  }
+  a {
+    color: #000;
   }
 }
 
